[package]
name = "sng-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway edge (branch/site) appliance binary: composes every Phase-2 library crate behind the sng-core::supervisor harness."

# Two artefacts: the `sng-edge` binary that operators run on the
# branch/site VM, and the library half of the same crate that the
# integration-test harness (`tests/*.rs`) links against so the
# composition is exercised end-to-end without spawning a real
# child process.
[[bin]]
name = "sng-edge"
path = "src/main.rs"

[lib]
name = "sng_edge"
path = "src/lib.rs"

[dependencies]
sng-core = { workspace = true }
sng-pal = { workspace = true }
sng-comms = { workspace = true }
sng-policy-eval = { workspace = true }
sng-telemetry = { workspace = true }
sng-dns = { workspace = true }
sng-fw = { workspace = true }
sng-ips = { workspace = true }
sng-swg = { workspace = true }
sng-ztna = { workspace = true }
sng-sdwan = { workspace = true }
sng-ha = { workspace = true }
sng-updater = { workspace = true }

tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread", "signal"] }
async-trait = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }

chrono = { workspace = true }
ed25519-dalek = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "rt-multi-thread", "sync", "time"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
uuid = { workspace = true }
# Test-only dependencies for the in-process control-plane
# harness in `tests/edge_e2e.rs`. `bytes`/`http`/`h2`/
# `tokio-rustls` reproduce the same TLS+h2 server shape that
# `sng-comms/tests/integration.rs` uses, so the supervisor
# talks to a real rustls + h2 endpoint instead of a mocked
# transport. `rmp-serde` + `serde_bytes` are the wire codec
# for policy bundle claims and telemetry envelopes used by
# the test harness.
#
# `serde` and `sng-comms` are deliberately NOT redeclared
# here even though the test file uses them \u2014 they are
# already in `[dependencies]` (`serde` directly,
# `sng-comms = { workspace = true }`) and Cargo makes regular
# dependencies available to integration tests automatically,
# so adding them again would just create a redundant manifest
# entry.
bytes = { workspace = true }
http = { workspace = true }
h2 = { workspace = true }
tokio-rustls = { workspace = true }
rmp-serde = { workspace = true }
serde_bytes = { workspace = true }

[lints]
workspace = true
