[package]
name = "sng-ha"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway edge high-availability: VRRP-class active/passive failover, connection-table state sync, health-driven demotion, and virtual-IP management for branch-site edge VMs"

[dependencies]
sng-core = { workspace = true }
sng-comms = { workspace = true }

tokio = { workspace = true, features = ["sync", "time", "net", "process", "rt", "macros", "fs", "io-util"] }
socket2 = { workspace = true }
arc-swap = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
rmp-serde = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "sync", "time", "io-util"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
