[package]
name = "sng-mobile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "ShieldNet Gateway platform-agnostic mobile agent core: lifecycle, enrolment, auth, posture, ZTNA, tunnel + telemetry brain that the iOS / Android Platform Abstraction Layers plug into"

[dependencies]
sng-core = { workspace = true }
sng-comms = { workspace = true }
sng-policy-eval = { workspace = true }
sng-telemetry = { workspace = true }
sng-ztna = { workspace = true }

tokio = { workspace = true, features = ["sync", "time"] }
async-trait = { workspace = true }
parking_lot = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
ipnet = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt", "macros", "sync", "time"] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
